<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdgeLength="0dp"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@mipmap/b26"
    android:clickable="false">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cse110mt13.tritonprofessorraterv1.ProfPage"
    android:clickable="false">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.IconMenu.Item"
        android:text="Prof Name"
        android:textSize="32sp"
        android:id="@+id/Prof_name"
        android:textColor="#171a42"
        android:allowUndo="false"
        android:textStyle="bold"
        android:elegantTextHeight="false"
        android:gravity="center_horizontal"
        android:focusable="false"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/addRatingButton"
        android:layout_alignEnd="@+id/addRatingButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="serif" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/easiness"
        android:textSize="20sp"
        android:textColor="#434242"
        android:id="@+id/Prof_Ess"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Prof_name"
        android:layout_alignRight="@+id/Prof_Hlp"
        android:layout_alignEnd="@+id/Prof_Hlp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/helpfulness"
        android:textSize="20sp"
        android:textColor="#434242"
        android:id="@+id/Prof_Hlp"
        android:layout_below="@+id/Prof_Ess"
        android:layout_marginTop="6dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/Prof_name"
        android:layout_alignEnd="@+id/Prof_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/clarity"
        android:textSize="20dp"
        android:textColor="#434242"
        android:id="@+id/Prof_Clt"
        android:layout_below="@+id/Prof_Hlp"
        android:layout_marginTop="6dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/Prof_Hlp"
        android:layout_alignEnd="@+id/Prof_Hlp" />



    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_view_prof_comment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:smoothScrollbar="false"
        android:padding="10dp"
        android:layout_below="@+id/Prof_Clt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Value"
        android:textSize="20dp"
        android:textColor="#434242"
        android:id="@+id/easiness_val"
        android:layout_above="@+id/Prof_Hlp"
        android:layout_toRightOf="@+id/Prof_Ess"
        android:layout_toEndOf="@+id/Prof_Ess" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Value"
        android:textSize="20dp"
        android:textColor="#434242"
        android:id="@+id/helpfulness_v"
        android:layout_alignTop="@+id/Prof_Hlp"
        android:layout_toRightOf="@+id/Prof_Hlp"
        android:layout_toEndOf="@+id/Prof_Hlp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Value"
        android:textSize="20dp"
        android:textColor="#434242"
        android:id="@+id/clarity_v"
        android:layout_above="@+id/list_view_prof_comment"
        android:layout_toRightOf="@+id/Prof_Clt"
        android:layout_toEndOf="@+id/Prof_Clt" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/button7"
        android:textColor="#4c515f"
        android:text="@string/addRating"
        android:id="@+id/addRatingButton"
        android:layout_below="@+id/list_view_prof_comment"
        android:layout_alignEnd="@+id/list_view_prof_comment" />

</RelativeLayout>
</ScrollView>
