<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cse110mt13.tritonprofessorraterv1.AddComment"
    tools:showIn="@layout/activity_add_comment"
    android:background="@mipmap/b26">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cse110mt13.tritonprofessorraterv1.AddComment"
    tools:showIn="@layout/activity_add_comment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="top"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ac_Comment_ET"
        android:background="@drawable/rectangle_drawable_back"
        android:inputType="textMultiLine"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profname"
        android:id="@+id/ac_ProfName_TV"
        android:gravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:typeface="serif" />

    <Button
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/submit"
        android:background="@drawable/button7"
        android:id="@+id/ac_Submit_B"
        android:layout_below="@+id/ac_Comment_ET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/button7"
        android:text="@string/cancel"
        android:id="@+id/ac_Cancel_B"
        android:layout_below="@+id/ac_Comment_ET"
        android:layout_toRightOf="@+id/ac_Submit_B"
        android:layout_toEndOf="@+id/ac_Submit_B"
        android:onClick="BackToProfPage"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/coursename"
        android:id="@+id/acCourseName"
        android:layout_below="@+id/ac_ProfName_TV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/Theme.AppCompat"
        android:typeface="serif" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/clarity"
        android:id="@+id/acClarity"
        android:layout_below="@+id/acCourseName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:typeface="serif" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/easiness"
        android:id="@+id/acEasy"
        android:layout_below="@+id/acClarity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:allowUndo="true"
        android:typeface="serif" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/helpfulness"
        android:id="@+id/acHelp"
        android:layout_below="@+id/acEasy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:typeface="serif" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/ac_AddCourse_ET"
        android:layout_below="@+id/ac_ProfName_TV"
        android:background="@drawable/rectangle_drawable_back"
        android:layout_toRightOf="@+id/acCourseName"
        android:layout_toEndOf="@+id/acCourseName"
        android:inputType="text" />

    <RatingBar
        android:layout_width="110dp"
        android:layout_height="22dp"
        android:id="@+id/ac_RatingC"
        android:layout_alignTop="@+id/acClarity"
        android:layout_alignLeft="@+id/ac_AddCourse_ET"
        android:layout_alignStart="@+id/ac_AddCourse_ET"
        android:numStars="5"
        android:rating="1"
        android:stepSize="0.5"
        android:isIndicator="false"
        style="@style/newRatingBar" />

    <RatingBar
        android:layout_width="110dp"
        android:layout_height="22dp"
        android:id="@+id/ac_RatingE"
        android:layout_alignTop="@+id/acEasy"
        android:layout_alignLeft="@+id/acEasy"
        android:layout_alignStart="@+id/ac_AddCourse_ET"
        android:numStars="5"
        android:rating="1"
        android:stepSize="0.5"
        style="@style/newRatingBar"
        android:layout_alignRight="@+id/ac_RatingH"
        android:layout_alignEnd="@+id/ac_RatingH" />

    <RatingBar
        android:layout_width="110dp"
        android:layout_height="22dp"
        style="@style/newRatingBar"
        android:id="@+id/ac_RatingH"
        android:layout_alignTop="@+id/acHelp"
        android:layout_alignLeft="@+id/acHelp"
        android:layout_alignStart="@+id/ac_AddCourse_ET"
        android:numStars="5"
        android:rating="1"
        android:stepSize="0.5"
        android:layout_alignRight="@+id/ac_RatingC"
        android:layout_alignEnd="@+id/ac_RatingC" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/comment"
        android:id="@+id/textView5"
        android:layout_below="@+id/acHelp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:typeface="serif" />

</RelativeLayout>
</ScrollView>