...
        android:layout_marginBottom="41dp"
        android:onClick="ForwardToAddProf" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewSearch_page"
        android:layout_below="@+id/search_ET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/sp_AddProf_B" />

    <!--
...
