<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cse110mt13.tritonprofessorraterv1.SearchNotFound"
    android:background="@mipmap/b19">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:id="@+id/search_B"
        android:layout_alignTop="@+id/search_ET"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_ET"
        android:layout_toLeftOf="@+id/search_B"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Class/Professor Name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="not found !"
        android:id="@+id/textView6"
        android:textSize="25dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Professor or class"
        android:id="@+id/textView7"
        android:textSize="25dp"
        android:layout_above="@+id/searchString_TV"
        android:layout_alignStart="@+id/add_Prof_B" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Professor"
        android:id="@+id/add_Prof_B"
        android:textSize="20dp"
        android:onClick="ForwardToAddProf"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/search_ET"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/searchString_TV"
        android:textSize="30dp"
        android:textColor="#c92121"
        android:gravity="center_horizontal"
        android:layout_above="@+id/textView6"
        android:layout_alignEnd="@+id/search_B"
        android:layout_alignParentStart="true" />

</RelativeLayout>
