<resources>
    <string name="app_name">TritonProfRater</string>
    <string name="parse_app_id">QiinPbhiqxWFjEF7FGMM9HuCI6WdTFCaO2MRlCQW</string>
    <string name="parse_client_key">s9BPYGtxQdePN5sOtkA3g5tqPnJnQccRKu8rO0nX</string>

    <string name="title_activity_add_prof">Add a Professor</string>
    <string name="title_activity_search_page">Search</string>
    <string name="title_activity_add_comment">Add a Rating</string>

    <string name="addProf">Add New Professor</string>
    <string name="addRating">Add A Rating</string>
    <string name="cancel">Cancel</string>
    <string name="clarity">Clarity: </string>
    <string name="comment">Comment:</string>
    <string name="createAcc">Create Account</string>
    <string name="coursename">Course Name</string>
    <string name="easiness">Easiness: </string>
    <string name="email">UCSD Email</string>

    <string name="helpfulness">Helpfulness: </string>
    <string name="login_B">Login</string>
    <string name="findUser">Reset Password</string>

    <string name="search">Class/Professor Name</string>
    <string name="searchText">Search</string>


    <string name="register_B">Register</string>

    <string name="password">Password</string>
    <string name="profname">Prof Name</string>


    <string name="submit">Submit</string>

    <string name="rating">Ratings:</string>
    <string name="noAcc">No account yet? Create one</string>
    <string name="haveAcc">Have account already? Login</string>
    <string name="remember">Remember your password? Login</string>
    <string name="forget_pw">Forget your password? Click here</string>
    <string name="username">Username</string>

    <string-array name="prof_name">
        <item>name 1</item>
        <item>name 2</item>
        <item>name 3</item>
    </string-array>
    <string-array name="descriptions">
        <item>description 1</item>
        <item>description 2</item>
        <item>description 3</item>
    </string-array>
    <string-array name="className">
        <item>course 1</item>
        <item>course 2</item>
        <item>course 3</item>
    </string-array>
    <string-array name="numOfLikes">
        <item>num 1</item>
        <item>num 2</item>
        <item>num 3</item>
    </string-array>
    <string-array name="comment">
        <item>comment 1</item>
        <item>comment 2</item>
        <item>comment 3</item>
    </string-array>
    <string-array name="easiness">
        <item>easiness 1</item>
        <item>easiness 2</item>
        <item>easiness 3</item>
    </string-array>
    <string-array name="helpfulness">
        <item>helpfulness 1</item>
        <item>helpfulness 2</item>
        <item>helpfulness 3</item>
    </string-array>
    <string-array name="clarity">
        <item>clarity 1</item>
        <item>clarity 2</item>
        <item>clarity 3</item>
    </string-array>


    <string name="pwdAgain">Type In Password Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting_page">Setting Page</string>

</resources>
